# link-shortener

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20240814121555_links.up.sql  20240816150826_link_statistics.down.sql  20240816150826_link_statistics.up.sql  20240903140855_settings.up.sql
src/: auth.rs  main.rs  routes.rs  utils.rs
